# ffmpeg-egui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  coords.rs  ffmpeg.rs  main.rs  mpv.rs  overlay.rs  present.rs  sfml_integ.rs  source.rs  subs.rs  text.rs  time_fmt.rs  ui.rs
src/mpv/: command.rs  commands.rs  properties.rs  property.rs
src/ui/: ffmpeg_cli.rs  right_panel.rs
