[package]
name = "ffmpeg-egui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.20", features = ["derive"] }
egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git" }
libmpv-sys = { git = "https://github.com/crumblingstatue/libmpv-rs.git", features = ["use-bindgen"] }
rand = "0.8.5"
rfd = "0.15.0"
shell-words = "1.1.0"
thiserror = "2"
kashimark.git = "https://github.com/crumblingstatue/kashimark.git"