[package]
name = "frogmpeg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.20", features = ["derive"] }
egui-sf2g = "0.3.1"
sf2g.version = "0.3"
sf2g.features = ["text"]
sf2g-xt = "0.3"
libmpv-sys = { git = "https://github.com/crumblingstatue/libmpv-rs.git", features = ["use-bindgen"] }
rand = "0.9.0"
egui-file-dialog = "0.10.0"
shell-words = "1.1.0"
thiserror = "2"
kashimark.git = "https://github.com/crumblingstatue/kashimark.git"
dirs = "6.0.0"
recently_used_list.git = "https://github.com/crumblingstatue/recently_used_list.git"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
